package org.printscript.ast

enum class DeclaredType { NUMBER, STRING, BOOLEAN }

enum class DeclarationKind { LET, CONST }

enum class BinaryOperator { PLUS, MINUS, TIMES, DIVIDE }

enum class UnaryOperator { MINUS }
